smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-escape-space.smithy
// Parse error at line 4, column 20 near `)\n`: Invalid escape found in string: `\ `
namespace smithy.example

@documentation("\ ")
string MyString
